--- a/src/app/Views/CryptoCoinDetailsView.html
+++ b/src/app/Views/CryptoCoinDetailsView.html
@@ -1,8 +1,10 @@
 
 <div>
-  <h1>{{coin.id}}</h1>
-  <h1>{{coin.name}}</h1>
-  <h1>{{coin.symbol}}</h1>
-  <h1>{{coin.volume}}</h1>
-  <h1>{{coin.price}}</h1></div>
+  <p>{{coin.name}}</p> | <p>{{coin.symbol}}</p>
+  Price: <p>{{coin.price}}</p>
+  24-Hour Volume: <p>{{coin.volume}}</p>
+  $100 = <p>{{coin.price}}</p>
+  $250 = <p>{{coin.price}}</p>
+  $5,000 = <p>{{coin.price}}</p>
+</div>
 <div><button [routerLink] = "['/cryptocoin/']">Goback</button></div>
