--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-navbar></app-navbar>
+
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
 
 </div>
-<h2>This is Navbar </h2>
 
 <router-outlet></router-outlet>
