--- a/src/app/Views/ErrorView.html
+++ b/src/app/Views/ErrorView.html
@@ -1,6 +1,7 @@
 
-
+<div class="card">
 <div>
-  <h1>Ohh!!! Something went wrong!!!</h1>
-  <button [routerLink] = "['/cryptocoin/']">Go Back</button>
+  <h1 class="blinking">Ohh!!! Something went wrong!!!</h1>
+  <button [routerLink] = "['/cryptocoin/']">Try Again</button>
+</div>
 </div>
