--- a/src/app/Views/NavBarView.html
+++ b/src/app/Views/NavBarView.html
@@ -1,6 +1,3 @@
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <!-- <img src="/docs/4.2/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
-    Crypto Tracker
-  </a>
-</nav>
+<div class="topnav">
+  <h1><a [routerLink] = "['/cryptocoin/']" class="active">Crypto Tracker</a></h1>
+</div>
