--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navbar></app-navbar>
 
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-
+<div class="mainBody">
+  <app-navbar></app-navbar>
+    <div class="body">
+      <router-outlet></router-outlet>
+    </div>
 </div>
-
-<router-outlet></router-outlet>
