--- a/src/app/Views/CryptoHomeView.html
+++ b/src/app/Views/CryptoHomeView.html
@@ -5,9 +5,9 @@
       <table>
         <thead>
           <tr>
-            <th (click)="sortColumn(name)">Coin Name</th>
-            <th (click)="sortColumn(symbol)">Symbol</th>
-            <th (click)="sortColumn(price)">Latest Price</th>
+            <th (click)="sortColumn('name')">Coin Name</th>
+            <th (click)="sortColumn('symbol')">Symbol</th>
+            <th (click)="sortColumn('price')">Latest Price</th>
             <th></th>
           </tr>
         </thead>
