--- a/src/app/Views/CryptoCoinDetailsView.html
+++ b/src/app/Views/CryptoCoinDetailsView.html
@@ -3,7 +3,7 @@
     <div  class="txt"><h2>Crypto-Coin</h2></div>
     <div class="container" *ngIf = "coin">
       <h3><b>{{coin.name}}  | {{coin.symbol}}</b></h3>
-      <p><b>Price: </b>{{coin.price}}</p>
+      <p><b>Price: </b>{{coin.price | currency}}</p>
       <p><b>24-Hour Volume: </b>{{coin.volume}}</p>
       <p><b>$100 &nbsp;&nbsp; &nbsp;= &nbsp;</b>{{(100/coin.price).toFixed(8)}} coins</p>
       <p><b>$250 &nbsp;&nbsp; &nbsp;= &nbsp;</b>{{(250/coin.price).toFixed(8)}} coins</p>
